GUI CSS: Tiny fixes
fixed floatfilter box sizes and non-overlapping nform buttons

--- a/web/htdocs/themes/facelift/scss/_views.scss
+++ b/web/htdocs/themes/facelift/scss/_views.scss
@@ -62,7 +62,7 @@ div.floatfilter {
 
   &.double {
     display: table-cell;
-    height: 110px;
+    height: 120.5px;
 
     .content {
       height: 82px;
